--- a/app/src/main/res/layout/fragment_calendar_.xml
+++ b/app/src/main/res/layout/fragment_calendar_.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginLeft="60dp"
         android:text="Calendar"
+        android:textColor="#079E90"
         android:textSize="33sp"/>
 
     <ImageView
@@ -21,5 +22,11 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
         android:background="@drawable/one_line"/>
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
