--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".MainFragment" >
+    tools:context=".MainFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,6 +19,7 @@
             android:layout_marginTop="70dp"
             android:layout_marginLeft="60dp"
             android:text="To-Do"
+            android:textColor="#079E90"
             android:textSize="33sp"/>
 
         <TextView
@@ -37,5 +39,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50dp"
         android:background="@drawable/one_line"/>
+
 
 </LinearLayout>
