--- a/app/src/main/res/layout/fragment_routine_.xml
+++ b/app/src/main/res/layout/fragment_routine_.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginLeft="60dp"
         android:text="Routine"
+        android:textColor="#079E90"
         android:textSize="33sp"/>
 
     <ImageView
