--- a/app/src/main/res/layout/routine_edit_dialog.xml
+++ b/app/src/main/res/layout/routine_edit_dialog.xml
@@ -31,18 +31,21 @@
 
         <TextView
             android:id="@+id/todoName"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
             android:text="루틴 이름"
             android:textStyle="bold"
             android:textColor="#232323"/>
 
         <EditText
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittext_blank"
             />
 
     </LinearLayout>
@@ -58,14 +61,17 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
+            android:layout_gravity="center"
             android:text="요일"
             android:textColor="#232323"
             android:textStyle="bold" />
 
         <EditText
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittext_blank"
             />
 
     </LinearLayout>
@@ -77,18 +83,21 @@
 
         <TextView
             android:id="@+id/time"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
             android:text="시간"
             android:textStyle="bold"
             android:textColor="#232323"/>
 
         <EditText
             android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="60dp"/>
+            android:layout_height="40dp"
+            android:layout_marginLeft="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
 
@@ -99,18 +108,21 @@
 
         <TextView
             android:id="@+id/place"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
             android:text="장소"
             android:textStyle="bold"
             android:textColor="#232323"/>
 
         <EditText
             android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="60dp"/>
+            android:layout_height="40dp"
+            android:layout_marginLeft="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittext_blank"/>
 
     </LinearLayout>
 
