--- a/app/src/main/res/layout/todo_add_dialog.xml
+++ b/app/src/main/res/layout/todo_add_dialog.xml
@@ -31,19 +31,21 @@
 
         <TextView
             android:id="@+id/todoName"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
             android:text="할일 이름"
             android:textStyle="bold"
             android:textColor="#232323"/>
 
         <EditText
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="30dp"
-            />
+            android:layout_gravity="center"
+            android:background="@drawable/edittext_blank"/>
 
     </LinearLayout>
 
@@ -54,18 +56,21 @@
 
         <TextView
             android:id="@+id/time"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
             android:text="시간"
             android:textStyle="bold"
             android:textColor="#232323"/>
 
         <EditText
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittext_blank"
             />
 
     </LinearLayout>
@@ -77,18 +82,21 @@
 
         <TextView
             android:id="@+id/place"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
             android:text="장소"
             android:textStyle="bold"
             android:textColor="#232323"/>
 
         <EditText
             android:layout_width="200dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_marginLeft="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/edittext_blank"
             />
 
     </LinearLayout>
