--- a/app/src/main/res/layout/memo_add_dialog.xml
+++ b/app/src/main/res/layout/memo_add_dialog.xml
@@ -84,7 +84,7 @@
             android:layout_gravity="center"
             android:layout_marginLeft="145dp"
             android:text="완료"
-            android:backgroundTint="#038058"/>
+            android:backgroundTint="#189B75"/>
 
     </LinearLayout>
 </LinearLayout>
