--- a/app/src/main/res/drawable/dialog_round_green.xml
+++ b/app/src/main/res/drawable/dialog_round_green.xml
@@ -8,7 +8,7 @@
             <!-- 각 모서리 dip 만큼 코너형식 -->
             <corners android:radius="20dip" />
             <!-- 배경색 -->
-            <solid android:color="#DCBEFDEA" />
+            <solid android:color="#DCF4EC" />
             <!-- 라인색 및 두께 -->
             <stroke android:width="2dp" android:color="#616161"/>
         </shape>
