--- a/app/src/main/res/layout/todo_edit_dialog.xml
+++ b/app/src/main/res/layout/todo_edit_dialog.xml
@@ -107,7 +107,7 @@
             android:layout_marginLeft="80dp"
             android:layout_marginTop="30dp"
             android:text="삭제"
-            android:backgroundTint="#F6A51B"/>
+            android:backgroundTint="#EDA45A"/>
 
         <Button
             android:id="@+id/todoEdit_ok"
@@ -116,7 +116,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:text="확인"
-            android:backgroundTint="#F6A51B"/>
+            android:backgroundTint="#EDA45A"/>
 
     </LinearLayout>
 </LinearLayout>
