--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/menu_bottom"
+        android:paddingTop="15dp"
         app:itemTextColor="@drawable/menu_select_color"
         app:itemIconTint="@drawable/menu_select_color"/>
 
