--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -41,4 +41,12 @@
         android:background="@drawable/one_line"/>
 
 
+    <!-- 투두/루틴 리스트들 들어갈 자리-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="450dp">
+    </LinearLayout>
+
+    <!-- 여기서부터 투두/루틴 버튼 만들 자리-->
+
 </LinearLayout>
