--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,6 +47,43 @@
         android:layout_height="450dp">
     </LinearLayout>
 
+
     <!-- 여기서부터 투두/루틴 버튼 만들 자리-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="86dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/routine_add"
+            android:layout_width="wrap_content"
+            android:layout_height="92dp"
+            android:layout_weight="1"
+            android:backgroundTint="#DCF4EC"
+            android:drawableLeft="@drawable/plus_btn_small"
+            android:gravity="center"
+            android:paddingLeft="25dip"
+            android:text="루틴 추가하기"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="10dp"/>
+
+        <Button
+            android:id="@+id/todo_add"
+            android:layout_width="wrap_content"
+            android:layout_height="92dp"
+            android:layout_weight="1"
+            android:backgroundTint="#DCF4EC"
+            android:drawableLeft="@drawable/plus_btn_small"
+            android:paddingLeft="25dip"
+            android:text="할일 추가하기"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="5dp"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
