--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -44,9 +44,17 @@
     <!-- 투두/루틴 리스트들 들어갈 자리-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="450dp">
+        android:layout_height="450dp"
+        android:layout_marginTop="25dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="365dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"/>
+
     </LinearLayout>
 
     <!-- 여기서부터 투두/루틴 버튼 만들 자리-->
+
 
 </LinearLayout>
