--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -44,14 +44,14 @@
     <!-- 투두/루틴 리스트들 들어갈 자리-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="411dp"
         android:layout_marginTop="25dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="365dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"/>
+            android:layout_height="432dp"
+            android:layout_marginLeft="20dp" />
 
     </LinearLayout>
 
@@ -59,41 +59,41 @@
     <!-- 여기서부터 투두/루틴 버튼 만들 자리-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="86dp"
+        android:layout_height="79dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
-            android:layout_height="92dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+
             android:layout_weight="1"
             android:background="@drawable/main_round_btn"
-
+            android:drawableLeft="@drawable/plus_btn_small"
             android:paddingLeft="25dip"
             android:text="루틴 추가하기"
             android:textColor="@color/black"
-            android:textSize="15sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
-            />
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
-            android:layout_height="92dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:backgroundTint="#DCF4EC"
 
+            android:background="@drawable/main_round_btn"
+            android:backgroundTint="#DCF4EC"
+            android:drawableLeft="@drawable/plus_btn_small"
             android:paddingLeft="25dip"
             android:text="할일 추가하기"
             android:textColor="@color/black"
-            android:textSize="15sp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="10dp"
-            />
+            android:textSize="15sp" />
 
     </LinearLayout>
-
 
 
 </LinearLayout>
