--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -60,10 +60,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="79dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/routine_add_btn"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_marginLeft="10dp"
@@ -78,7 +79,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/todo_add_btn"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_marginLeft="5dp"
