--- a/app/src/main/res/layout/todo_add_dialog.xml
+++ b/app/src/main/res/layout/todo_add_dialog.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/todoAdd_cancel"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/remove"
@@ -41,6 +42,7 @@
             android:textColor="#232323"/>
 
         <EditText
+            android:id="@+id/todo_title"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
@@ -67,6 +69,7 @@
             android:textColor="#232323"/>
 
         <EditText
+            android:id="@+id/todo_time"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
@@ -94,6 +97,7 @@
             android:textColor="#232323"/>
 
         <EditText
+            android:id="@+id/todo_place"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginLeft="30dp"
