--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/item_background">
 
     <LinearLayout
-        android:layout_width="290dp"
+        android:layout_width="270dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -18,7 +18,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/todo_title"
+                android:id="@+id/item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="지영이랑 안드 회의"
@@ -34,13 +34,13 @@
             android:layout_marginTop="15dp">
 
             <TextView
-                android:id="@+id/todo_time"
+                android:id="@+id/item_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7~7:30"
                 android:textSize="16sp" />
             <TextView
-                android:id="@+id/todo_place"
+                android:id="@+id/item_place"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -52,14 +52,14 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/yellowLine"
+        android:id="@+id/item_line"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/yellow_vertical_line">
+        android:background="@drawable/green_vertical_line">
     </ImageView>
 
     <TextView
-        android:id="@+id/ToDo"
+        android:id="@+id/item_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
