--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/item_background">
 
     <LinearLayout
-        android:layout_width="270dp"
+        android:layout_width="275dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -22,6 +22,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="지영이랑 안드 회의"
+                android:textSize="17sp"></TextView>
+
+            <TextView
+                android:id="@+id/item_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="(요일)"
                 android:textSize="17sp"></TextView>
 
 
