edit_dialog.xml 수정

--- a/app/src/main/res/layout/routine_add_dialog.xml
+++ b/app/src/main/res/layout/routine_add_dialog.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="380dp"
     android:layout_height="410dp"
     android:layout_gravity="center"
     android:background="@drawable/dialog_round_green"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="visible">
 
     <ImageView
         android:id="@+id/rtn_cancel"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/remove"
+        android:layout_marginLeft="310dp"
         android:layout_marginTop="32dp"
-        android:layout_marginLeft="310dp"/>
+        android:background="@drawable/remove" />
 
     <TextView
         android:id="@+id/textView2"
@@ -21,9 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="루틴 추가"
-        android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="32sp" />
+        android:textSize="32sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,23 +32,22 @@
 
         <TextView
             android:id="@+id/todoName"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="0dp"
             android:text="루틴 이름"
-            android:textStyle="bold"
-            android:textColor="#232323"/>
+            android:textColor="#232323"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/rtn_title"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
             android:layout_gravity="center"
-            android:background="@drawable/edittext_blank"
-            />
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
 
@@ -61,9 +60,9 @@
             android:id="@+id/day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
-            android:layout_gravity="center"
             android:text="요일"
             android:textColor="#232323"
             android:textStyle="bold" />
@@ -72,10 +71,9 @@
             android:id="@+id/rtn_day"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="60dp"
             android:layout_gravity="center"
-            android:background="@drawable/edittext_blank"
-            />
+            android:layout_marginLeft="60dp"
+            android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
 
@@ -86,22 +84,22 @@
 
         <TextView
             android:id="@+id/time"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="0dp"
             android:text="시간"
-            android:textStyle="bold"
-            android:textColor="#232323"/>
+            android:textColor="#232323"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/rtn_time"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="60dp"
             android:layout_gravity="center"
-            android:background="@drawable/edittext_blank"/>
+            android:layout_marginLeft="60dp"
+            android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
 
@@ -112,28 +110,29 @@
 
         <TextView
             android:id="@+id/place"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="0dp"
             android:text="장소"
-            android:textStyle="bold"
-            android:textColor="#232323"/>
+            android:textColor="#232323"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/rtn_place"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="60dp"
             android:layout_gravity="center"
-            android:background="@drawable/edittext_blank"/>
+            android:layout_marginLeft="60dp"
+            android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent">
 
         <Button
             android:id="@+id/rtn_add_ok"
@@ -141,8 +140,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="135dp"
-            android:text="완료"
-            android:backgroundTint="#189B75"/>
+            android:backgroundTint="#189B75"
+            android:text="완료" />
 
     </LinearLayout>
 </LinearLayout>
