--- a/app/src/main/res/layout/fragment_todo_edit_dialog.xml
+++ b/app/src/main/res/layout/fragment_todo_edit_dialog.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="380dp"
-    android:layout_height="380dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@drawable/dialog_round_yellow"
     android:orientation="vertical">
@@ -112,16 +112,16 @@
 
         <Button
             android:id="@+id/todoEdit_remove"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="75dp"
             android:layout_marginTop="30dp"
             android:text="삭제"
             android:backgroundTint="#EDA45A"/>
 
         <Button
             android:id="@+id/todoEdit_ok"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
