--- a/app/src/main/res/values/todo_dialog_width.xml
+++ b/app/src/main/res/values/todo_dialog_width.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dialog_width">383dp</dimen>
+    <dimen name="todo_dialog_width">383dp</dimen>
 </resources>
