--- a/app/src/main/res/layout/fragment_todo_edit_dialog.xml
+++ b/app/src/main/res/layout/fragment_todo_edit_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -11,9 +10,9 @@
         android:id="@+id/todoEdit_cancel"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/remove"
+        android:layout_marginLeft="310dp"
         android:layout_marginTop="32dp"
-        android:layout_marginLeft="310dp"/>
+        android:background="@drawable/remove" />
 
     <TextView
         android:id="@+id/textView"
@@ -21,9 +20,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:text="할일 수정"
-        android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="32sp" />
+        android:textSize="32sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,19 +33,19 @@
             android:id="@+id/todoNametxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="0dp"
             android:text="할일 이름"
-            android:textStyle="bold"
-            android:textColor="#232323"/>
+            android:textColor="#232323"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/todo_name_edit"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
             android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
@@ -60,21 +59,21 @@
             android:id="@+id/time"
             android:layout_width="55dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="0dp"
-            android:layout_gravity="center"
             android:text="시간"
-            android:textColor="#232323"
             android:textAlignment="center"
+            android:textColor="#232323"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/todo_time_edit"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
             android:layout_gravity="center"
-            android:background="@drawable/edittext_blank"/>
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
 
@@ -87,21 +86,21 @@
             android:id="@+id/place"
             android:layout_width="55dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_marginLeft="30dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="0dp"
             android:text="장소"
-            android:textStyle="bold"
             android:textAlignment="center"
-            android:textColor="#232323"/>
+            android:textColor="#232323"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/todo_place_edit"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="30dp"
             android:layout_gravity="center"
-            android:background="@drawable/edittext_blank"/>
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/edittext_blank" />
 
     </LinearLayout>
 
@@ -113,20 +112,20 @@
         <Button
             android:id="@+id/todoEdit_remove"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="75dp"
+            android:layout_height="53dp"
+            android:layout_marginLeft="70dp"
             android:layout_marginTop="30dp"
-            android:text="삭제"
-            android:backgroundTint="#EDA45A"/>
+            android:backgroundTint="#EDA45A"
+            android:text="삭제" />
 
         <Button
             android:id="@+id/todoEdit_ok"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_height="53dp"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="30dp"
-            android:text="확인"
-            android:backgroundTint="#EDA45A"/>
+            android:backgroundTint="#EDA45A"
+            android:text="확인" />
 
     </LinearLayout>
 </LinearLayout>
