--- a/app/src/main/res/layout/routine_add_dialog.xml
+++ b/app/src/main/res/layout/routine_add_dialog.xml
@@ -7,23 +7,32 @@
     android:orientation="vertical"
     android:visibility="visible">
 
-    <ImageView
-        android:id="@+id/rtn_cancel"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="310dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/remove" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:text="루틴 추가"
-        android:textColor="@color/black"
-        android:textSize="32sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="13dp"
+            android:text="루틴 추가"
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/rtn_cancel"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/remove" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -137,7 +146,7 @@
         <Button
             android:id="@+id/rtn_add_ok"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_gravity="center"
             android:layout_marginLeft="135dp"
             android:backgroundTint="#189B75"
