--- a/app/src/main/res/layout/todo_add_dialog.xml
+++ b/app/src/main/res/layout/todo_add_dialog.xml
@@ -7,23 +7,33 @@
     android:background="@drawable/dialog_round_green"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/todoAdd_cancel"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/remove"
-        android:layout_marginTop="32dp"
-        android:layout_marginLeft="310dp"/>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:text="할일 추가"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="32sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="13dp"
+            android:text="할일 추가"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="32sp" />
+
+
+        <ImageView
+            android:id="@+id/todoAdd_cancel"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/remove"
+            android:layout_marginTop="32dp"
+            android:layout_marginLeft="150dp"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -114,7 +124,7 @@
         <Button
             android:id="@+id/todoAdd_ok"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_height="53dp"
             android:layout_gravity="center"
             android:layout_marginLeft="145dp"
             android:text="완료"
